# lore

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  PROMPT-PHASE4.2-CLASSIFIER-REGISTRY.md  PROMPT-complex-benchmark.md  PROMPT-fix-degradation-and-quality.md  PROMPT-fix-latency.md  PROMPT-investigate-degradation.md  PROMPT-orchestration-overhaul.md  README.md  pyproject.toml
benchmarks/: ppl_sample.txt
configs/: compression.yaml  memory.yaml  models.yaml  orchestrator.yaml  router.yaml  router_model.joblib  router_training_data.jsonl  sessions.yaml  tools.yaml  verifier.yaml
docs/: ab-test-results-full.md  ab-test-results.md  architecture.md  humaneval-results.md  kv-cache-research.md  launch-content.md  optimization-log.md  orchestration-analysis.md  orchestration-quality-comparison.md  orchestration-research.md  qwythos-eval.md  speculative-decoding.md  swebench-results.md
scripts/: auto_select_models.py  benchmark_hyfunc.py  benchmark_kv_cache.py  benchmark_layer_routing.py  benchmark_minicache.py  benchmark_ngram_spec.py  benchmark_orchestration.py  benchmark_spec_decode.py  benchmark_swebench.py  benchmark_tide.py  compare_quality.py  health_check.sh  run_ab_realistic.py  run_ab_subset.py  run_ab_suite.py  run_all_real_tests.sh  setup.sh  start_lore_api.py  test_orchestrator_real.py  test_real_inference.py  test_wiring_real.py  train_router.py
tests/: test_ab_test.py  test_api.py  test_classifier.py  test_cli.py  test_compression.py  test_config.py  test_context.py  test_e2e_agentic.py  test_health.py  test_integration.py  test_json_utils.py  (+14 more)
(+52 files in other folders)
